--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,14 +53,22 @@ jobs:
               description="No description available"
             fi
             
-            # 转义description中的特殊字符
+            # 提取package_name字段
+            package_name=$(jq -r '.package_name' "$file" 2>/dev/null || echo "")
+            if [ -z "$package_name" ] || [ "$package_name" = "null" ]; then
+              package_name="Default Package"
+            fi
+            
+            # 转义字符串中的特殊字符
             description_escaped=$(echo "$description" | sed 's/"/\\"/g')
+            package_name_escaped=$(echo "$package_name" | sed 's/"/\\"/g')
             
             # 添加到 manifest
             echo "{
               \"id\": \"$resource_id\",
               \"file\": \"$filename\",
               \"path\": \"$rel_path\",
+              \"package_name\": \"$package_name_escaped\",
               \"description\": \"$description_escaped\",
               \"url\": \"https://github.com/${{ github.repository }}/releases/download/${{ env.RELEASE_TAG }}/$filename\",
               \"sha256\": \"$sha\"
